# ByteCastle

./: CMakeLists.txt  main.cpp
Headers/: NetworkModule.h  UserCredentials.h
Source/: NetworkModule.cpp
test_client/: CMakeLists.txt  test_client.cpp
